--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "rest API for rolex project",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "dev": "nodemon ./src/index.js",
+    "dev": "babel-node ./src/index.js",
+    "build-babel": "babel -d ./build ./src -s",
+    "clean": "rm -rf build && mkdir build",
+    "build": "npm run clean && npm run build-babel",
+    "start": "npm run build && node ./build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,6 +18,12 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.21.5",
+    "@babel/core": "^7.21.5",
+    "@babel/node": "^7.20.7",
+    "@babel/preset-env": "^7.21.5",
+    "@babel/register": "^7.21.0",
+    "dotenv": "^16.0.3",
     "nodemon": "^2.0.22",
     "winston": "^3.8.2"
   }
